# iida_devkit

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: fw_verification.yml
firmware/: .clang-format  CMakeLists.txt  README.md  stm32l552.svd
firmware/application/: CMakeLists.txt  app_header.cpp  application.ld.in  header.cpp  header.cpp.in  libnano.cpp  main.cpp  panic.cpp  postbuild.py  postbuild.sh.in  startup.cpp  startup.s  system.cpp
firmware/application/FreeRTOSPort/: CMakeLists.txt  mpu_wrappers_v2_asm.c  port.c  portasm.c  portasm.h  portmacro.h  portmacrocommon.h
firmware/application/include/: FreeRTOSConfig.h  memorymap.hpp.in
firmware/bootloader/: CMakeLists.txt  bootloader.cpp  bootloader.ld.in  header.cpp.in  libnano.cpp  main.cpp  panic.cpp  startup.cpp  startup.s  system.cpp  xmodem.cpp  ymodem.cpp
firmware/bootloader/include/: bootloader.hpp  header.hpp  memorymap.hpp.in  system.hpp  xmodem.hpp  ymodem.hpp
firmware/cmake/: arm-none-eabi.cmake  common.cmake
firmware/cmake/qemu/: memory.cmake
firmware/cmake/stm32l552xx/: memory.cmake
firmware/drivers/: async_uart.cpp  flash.cpp  i2c.cpp  interrupts.cpp  modem.cpp  uart.cpp
firmware/drivers/include/: async_uart.hpp  flash.hpp  gpio.hpp  i2c.hpp  interrupts.hpp  modem.hpp  stm32l552xx.h  uart.hpp
firmware/iida_devkit/: iida_devkit.ioc
firmware/include/: common.hpp  common.hpp.in  config.hpp.in  crc16.hpp  errno.hpp  error.hpp  etl_profile.h  helpers.hpp  memorymap.hpp.in  pinmap.hpp  system.hpp
firmware/ptsw/: .mxproject  CMakeLists.txt  Makefile  STM32L552xE_FLASH.ld  iida_devkit.ioc
firmware/ptsw/Core/Inc/: main.h  stm32l5xx_hal_conf.h
firmware/ptsw/Core/Src/: hash.c  i2c.c  main.c  rng.c  rtc.c  stm32l5xx_hal_msp.c  stm32l5xx_it.c  syscalls.c  usart.c
firmware/scripts/: codechecker.sh  postbuild.py
firmware/test/: selftest.cpp
firmware/test/include/: selftest.hpp
hardware/: .gitignore  README.md  antenna.kicad_sch  bom.ini  fp-lib-table  iida_devkit.kicad_pcb  iida_devkit.kicad_pro  iida_devkit.kicad_sch  mcu.kicad_sch  modem.kicad_sch  power.kicad_sch  sim.kicad_sch  sym-lib-table
hardware/ptsw/: .mxproject  Makefile  iida_devkit.ioc
hardware/ptsw/Core/Inc/: stm32l5xx_hal_conf.h  stm32l5xx_it.h
hardware/ptsw/Core/Src/: gpio.c  iwdg.c  main.c  octospi.c  usart.c  usb.c
